files/traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`page.your.domain`).
      kind: Rule
      services:
        - name: nginx-demo
          port: 80
  tls:
    secretName: nginx-cert
